[tool.poetry]
name = "greenatom"
version = "0.1.0"
description = ""
authors = ["ArtemBagin <artem.bagin@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
